--- a/index.html
+++ b/index.html
@@ -1,32 +1,11 @@
 <!DOCTYPE html>
-<html lang=“en”>
-
+<html>
 <head>
-    <meta charset=“UTF-8”>
-    <meta name=“viewport” content=“width=device-width, initial-scale=1.0”>
-    <title>Buttons and Background</title>
-    <style>
-        body {
-            background-color: #333;
-            padding: 10px;
-            font-family: Arial, sans-serif;
-        }
-
-        button {
-            background-color: white;
-            color: black;
-            padding: 5px 15px;
-            border-radius: 4px;
-            margin: 5px;
-            cursor: pointer;
-        }
-    </style>
+ <meta charset="utf-8">
+ <title>Мой сайт</title>
 </head>
-
 <body>
-    <h1>Buttons and Background Page</h1>
-    <p>This is a simple HTML page with two buttons and a dark background color.</p> <button>Button 1</button>
-    <button>Button 2</button>
+ <h1>Добро пожаловать на мой сайт</h1>
+ <p>Здесь будет основной контент.</p>
 </body>
-
 </html>
